--- a/css/sign-up.css
+++ b/css/sign-up.css
@@ -27,16 +27,120 @@
     justify-content: center;
     align-items: center;
     flex: 40%;
+    z-index:5;
+
+    
 }
 
 
+
+@keyframes traslateY {
+    from {
+        transform: translateY(-200px);
+        opacity: 0%;
+    }
+    to {
+        transform: translateY(0px);
+        opacity: 100%;
+    }
+  }
+
+
+@keyframes traslateX_right {
+    from {
+        transform: translateX(-200px);
+        opacity: 0%;
+    }
+    to {
+        transform: translateX(0px);
+        opacity: 100%;
+    }
+}
+
+@keyframes traslateX_left {
+    from {
+        transform: translateX(200px);
+        opacity: 0%;
+    }
+    to {
+        transform: translateX(0px);
+        opacity: 100%;
+    }
+}
+@keyframes visible {
+    from {
+        
+        opacity: 0%;
+    }
+    to {
+        
+        opacity: 100%;
+    }
+}
+#mad-block1{
+    animation-duration: 3s;
+    animation-timing-function:ease-out;
+    animation: iteration count 1;
+    
+    animation-name: traslateY;
+}
+#mad-block2{
+    animation-duration: 3s;
+    animation-timing-function:ease-out;
+    animation: iteration count 1;
+    
+    animation-name: traslateX_right;
+}
+
+#mad-block3{
+    animation-duration: 3s;
+    animation-timing-function:ease-out;
+    animation: iteration count 1;
+    
+    animation-name: traslateX_left;
+}
+
+#mad-block-center{
+    opacity: 0%;
+    animation-duration: 2s;
+    animation-delay: 1.5s;
+    animation-timing-function:ease-out;
+    animation-fill-mode: forwards;
+    animation: iteration count 1;
+    
+    animation-name: visible;
+}
+
+
+
+@keyframes opening {
+    from {
+        opacity: 0%;
+    }
+    to {
+        opacity: 100%;
+    }
+}
+
 #container-destra {
+    
     flex: 60%;
     display: flex;
     flex-direction: column;
     background-color: rgb(207, 207, 207);
     border-radius: 0px 20px 20px 0px;
     background-image: linear-gradient(to right, rgb(255 255 255), rgb(200 201 204));
+    opacity: 0%;
+    animation-delay: 4.5s;
+    animation-duration: 2s;
+
+    animation-timing-function:ease-out;
+    animation-fill-mode: forwards;
+    animation: iteration count 1px;
+    
+    animation-name: opening;
+
+
 }
 
 #container-destra h2{
